暴力破解验证码

--- a/headlessLocust/locust.conf
+++ b/headlessLocust/locust.conf
@@ -1,5 +1,9 @@
-locustfile=D:\PycharmProjects\locustProject\headLocust\locustfile2.py
+locustfile=D:\PycharmProjects\locustProject\headlessLocust\locustfile2.py
 host = https://api.jyfwyun.com
 web-host=127.0.0.1
 run-time=1
+spawn-rate=3
+users=3
+headless=true
+csv=D:\PycharmProjects\locustProject\headlessLocust\csv\
 
